--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Management System</title>
-</head>
-<body>
-    <div class="container-fluid border-bottom">
-        Hello world
+  </head>
+  <body class="container-xl">
+    <div class="bgImage">
+      <img src="./images/bg-tablet-pattern.svg" />
     </div>
-</body>
+    <header class="container-xl p-0">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-xl">
+          <a class="navbar-brand" href="#">
+            <img src="./images/logo.png" width="100px" height="auto" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+            <div>
+              <button class="btn headerBtn">Get Started</button>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="container ">
+      <div class="row">
+        <article class="col-md-6 order-2 ">
+          <h1 class="fw-bold"><span class="display-3">A modern and simple<br>school management product <br>that you are looking for!</h1>
+          <div class="btnContainer">
+            <button class="btn headerBtn mt-3">Get Started</button>
+          </div>
+        </article>
+        <article class="col-md-6 order-1 order-md-2 ">
+          <img src="./images/illustration-intro.svg" />
+        </article>
+      </div>
+    </main>
+  </body>
 </html>
