--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,7 +12,7 @@
     <header class="container-xl p-0">
       <nav class="navbar navbar-expand-lg">
         <div class="container-xl">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="./images/logo.png" width="100px" height="auto" />
           </a>
           <button
@@ -42,18 +42,18 @@
               </li>
             </ul>
             <div>
-              <button class="btn headerBtn">Get Started</button>
+              <a class="btn headerBtn" href="./auth.html">Get Started</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
-    <main class="container ">
+    <main class="container home">
       <div class="row">
         <article class="col-md-6 order-2 ">
           <h1 class="fw-bold"><span class="display-3">A modern and simple<br>school management product <br>that you are looking for!</h1>
           <div class="btnContainer">
-            <button class="btn headerBtn mt-3">Get Started</button>
+            <a class="btn headerBtn mt-3" href="./auth.html">Get Started</a>
           </div>
         </article>
         <article class="col-md-6 order-1 order-md-2 ">
